# QQbot

bot/: Lagrange.OneBot.exe - 快捷方式.lnk
bot/QQbot/: .env.prod  README.md  pyproject.toml
bot/go-cqhttp/: config.yml
